<resources>
    <string name="app_name">ProjectAkhir</string>
    <string name="user">Profile</string>
    <string name="marker">Lokasi</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title Buku</string>
    <string name="secondary_text">Nama Penulia</string>
    <string name="supporting_text">Deskripsi</string>
    <string name="harga">Harga Buku</string>
    <string name="lokasi">Alamat Toko</string>
    <string name="map_key" translatable="false">AIzaSyDx1wbGqGXC6tpqESStiROeoa6fDEIciKU</string>
    <string name="title_activity_maps">Map</string>
</resources>